objects/Apttus_Config2__AssetAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class</description>
    <fields>
        <fullName>APTS_CPChoice_Pick5__c</fullName>
        <label>CPChoice Pick5</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Checkpoint_Choice__c</fullName>
        <label>Checkpoint Choice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <description>Created as part of DOC-3881</description>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_PPC_Ad_Costs__c</fullName>
        <label>PPC Ad Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Advertising__c</fullName>
        <label>PPC Management Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Landing_Pages__c</fullName>
        <label>PPC Landing Pages</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Language_Selection__c</fullName>
        <label>PPC Language Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Español</fullName>
                </value>
                <value>
                    <fullName>Espanol</fullName>
                    <isActive>false</isActive>
                    <label>Espanol</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PPC_Mgmt_Fee_Override__c</fullName>
        <label>PPC Management Fee Override %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Rounded_Value__c</fullName>
        <label>PPC Value to Add to Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Type__c</fullName>
        <label>PPC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New PPC</fullName>
                </value>
                <value>
                    <fullName>Existing PPC (Increase the Monthly Spend)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PPC_Value__c</fullName>
        <label>Requested PPC Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Website_Selection__c</fullName>
        <label>PPC Website Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FirmSite or FindLaw Landing Page Hosting</fullName>
                </value>
                <value>
                    <fullName>Third Party Site (No Landing Pages)</fullName>
                </value>
                <value>
                    <fullName>LawInfo</fullName>
                </value>
                <value>
                    <fullName>FirmSite</fullName>
                    <isActive>false</isActive>
                    <label>FirmSite</label>
                </value>
                <value>
                    <fullName>Live Site (Non FirmSite)</fullName>
                    <isActive>false</isActive>
                    <label>Live Site (Non FirmSite)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Qty_Type__c</fullName>
        <label>Pricing Quantity Type (UoM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Quantity__c</fullName>
        <label>Pricing Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Number_of_Points__c</fullName>
        <label>Total Number of Points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <description>ID of the associated asset line item</description>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Asset Attribute Values</relationshipLabel>
        <relationshipName>AssetAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Bundle_Print__c</fullName>
        <label>Purchase Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship &amp; Entitle - APP</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Entitle Sub</fullName>
                </value>
                <value>
                    <fullName>Sub Only APP</fullName>
                </value>
                <value>
                    <fullName>Sub Only</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Entitle Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCS_Print_Purchase_Options__c</fullName>
        <label>Print Purchase Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship &amp; Enter Sub APP</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Enter Sub</fullName>
                </value>
                <value>
                    <fullName>Sub Only APP</fullName>
                </value>
                <value>
                    <fullName>Sub Only</fullName>
                </value>
                <value>
                    <fullName>Fill-Up &amp; Enter Sub APP</fullName>
                </value>
                <value>
                    <fullName>Fill-Up &amp; Enter Sub</fullName>
                </value>
                <value>
                    <fullName>Fill-Up</fullName>
                </value>
                <value>
                    <fullName>Ship Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Prof_Binder_Softbound__c</fullName>
        <label>Product Delivery Binder|Softbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Bundle__c</fullName>
        <label>Product Delivery Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Download_Online__c</fullName>
        <label>Product Delivery Download|Online/Interne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Download__c</fullName>
        <label>Product Delivery Download</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_HTML_Onln_Word_Eflex__c</fullName>
        <label>Product Delivery HTML|Online|Word|E-flex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_HTML__c</fullName>
        <label>Product Delivery HTML</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Live_In_Person_Virtual__c</fullName>
        <label>Product Delivery Live/In Person/Virtual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Newsletter_eBook__c</fullName>
        <label>Product Delivery Newsletter|eBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_PDF_Softbound__c</fullName>
        <label>Product Delivery PDF|Softbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_PDF__c</fullName>
        <label>Product Delivery PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Product_Delivery_Online_Intern__c</fullName>
        <label>Product Delivery Online/Internet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Product_Delivery_Word__c</fullName>
        <label>Product Delivery Word</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Softbound__c</fullName>
        <label>Product Delivery Softbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Softbound_eBook__c</fullName>
        <label>Product Delivery Softbound|eBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_eBook__c</fullName>
        <label>Product Delivery eBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_e_Flex_Online_Internet__c</fullName>
        <label>Product Delivery E-flex/Online</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_e_Flex__c</fullName>
        <label>Product Delivery e-Flex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Asset Attribute Value</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>